--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <div id="resultats">
     <p>Chargement des données...</p>
   </div>
+  <div id="resultats2">
+    <p>Chargement des données...</p>
+  </div>
 
   <script src="script.js"></script>
   <script src="script_rsi.js"></script>
