--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   <div id="resultats">
     <p>Chargement des données...</p>
   </div>
-  <div id="resultats2">
-    
-  </div>
+  <div id="resultats2"></div>
+
 
   <script src="script.js"></script>
   <script src="script_rsi.js"></script>
