--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Analyse Marché - XAU & Crypto</title>
+  <title>Analyse Marché - Crypto</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>📈 Analyse Marché : XAU & Cryptos</h1>
+  <h1>📈 Analyse Marché : Cryptos</h1>
 
   <div id="resultats">
     <p>Chargement des données...</p>
